--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -58,7 +58,7 @@
       <paper-scroll-header-panel id="mainpanel" main fixed>
         <aq-toolbar class="paper-header" showMenu="[[computeShowMenu(narrow, showSidebar)]]"></aq-toolbar> 
 
-        <div id="content">
+        <div id="content" class="fit">
         <app-router id="dashboard-router" mode="hash" trailingSlash="ignore">
           
           <app-route path="/dashboard/editor" element="aq-editor-main" bindrouter=""></app-route>
