--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -1,13 +1,5 @@
 
-<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
-
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
-
-<link rel='import' href='../aq-community-all-results.html'>
-<link rel='import' href='../aq-community-topics.html'>
+<link rel='import' href='./aq-community-all-results.html'>
 
 <style>
 
@@ -27,9 +19,7 @@
     color: black;
     /*outline: none;*/
   }
-  .results {
-    margin-top: 90px;
-  }
+  
 </style>
 
 
