--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -29,7 +29,7 @@
 
 <style>
 
- :host {
+  :host {
       display: block;
       background-color: #E5E5E5;
       -ms-user-select: none;
@@ -48,7 +48,7 @@
   }
 
 
-  .drawerpanel {
+  drawerpanel {
     height:89%;
     width:97%;
     top:10%;
@@ -77,7 +77,6 @@
   paper-toolbar {
       --paper-toolbar-height:40px;
     }
-
 
 </style>
 
@@ -109,7 +108,7 @@
       properties :{
         isProgrammer:{
           type:Boolean,
-          value:false,
+          value:true,
         },
       },
 
@@ -118,6 +117,7 @@
         'toggle-drawer':'toggleDrawer',
         'toggle-console':'toggleConsole',
         'close-console':'closeConsole',
+         'selected-items-changed':'rowSelected',
       },
 
       toggleConsole() {
