--- a/src/components/editor/aq-editor-edit-sidebar-universe.html
+++ b/src/components/editor/aq-editor-edit-sidebar-universe.html
@@ -63,7 +63,7 @@
 	<template>
 
 	<div style="height:530px">
-		<div style="border:1px solid; height:65%" class="layout horizontal">
+		<div style="height:65%" class="layout horizontal">
 			<paper-menu selected="{{selected}}" id='mainmenu'>
 				<a href="javascript:void(0)"> <paper-item>Item 1</paper-item></a>
 				<a href="javascript:void(0)"> <paper-item>Item 2</paper-item></a>
