--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -30,7 +30,8 @@
 		}
 
 		#strategyName {
-			height:35px;
+			height:24px;
+			margin-top: 3px;
 		}
 
 		
@@ -43,14 +44,8 @@
 	     		 
 	        	<div class="flex" style="max-width:5%"></div>
 
-		 		<paper-button raised noink>Save
-	          	</paper-button>	
-
-	          	<paper-button raised noink>New
-	          	</paper-button>	
-
-				<paper-button raised noink>Add
-	          	</paper-button>
+		 		<paper-icon-button icon="icons:save"></paper-icon-button>	
+		 		<paper-icon-button icon="icons:add"></paper-icon-button>	
 
 	        	<div class="flex" ></div>
 	        
