--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -1,28 +1,34 @@
 
-<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../../bower_components/paper-card/paper-card.html">
 
 
-<link rel="import" href="../../bower_components/paper-checkbox/paper-checkbox.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/gold-email-input/gold-email-input.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 
 <dom-module id="aq-user-login-panel">
   <style is="custom-style" include="iron-flex iron-positioning"></style>
   <style>
-
+     
     #container {
-      max-height: 600px;
       width: 370px;
       margin: 0 auto;
       padding-top: 50px;
+      margin-top:50px;
     }
    
     .dialog-fields {
       padding: 1em 2em 1em 2em;
+    }
+
+    #userEmailInput {
+      width:346px;
+      margin-left:-20px;
+      margin-top:-30px;
     }
 
     .forgot-password {
@@ -72,7 +78,7 @@
   </style>
   
   <template>
-  <div id='container' class="layout vertical center-justified">
+  <div id='container' class="layout vertical center-justified flex">
     <paper-card heading="{{aRsrc.headerText}}">
    
       <div class="dialog-fields" class="layout vertical">
@@ -102,6 +108,7 @@
         </template>
 
         <gold-email-input id = 'userEmailInput' class='input-fields' 
+                     auto-complete='on' 
                      label="{{aRsrc.userEmailFieldLabel}}" 
                      value="{{userEmail}}"
                      error-message="{{userEmailErrorMessage}}"
@@ -173,7 +180,8 @@
       </a>
     </div>
 
-   </div>       
+   </div> 
+   
   </template>
   <script>
 
